# python-challenges

./: .gitignore  README.md  challenges.py  dictionary.py  error_handling.py  file_management.py  lists.py  main.py  oop.py  pyproject.toml  sets.py  setup.py  strings.py  test_challenges.py
.devcontainer/: devcontainer.json
src/: main.py
src/challenges/: __init__.py  algorithms.py
src/utils/: dict_utils.py  error_handling.py  file_management.py  list_utils.py  oop.py  set_utils.py  string_utils.py
tests/: __init__.py  test_algorithms.py  test_oop.py  test_utils.py
